learning/kubernetes/certificates/2-example/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-dns01
  namespace: default
  annotations:
    kubernetes.io/ingress.class: external-nginx
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - myapp-dns.example.com
    secretName: myapp-dns01-tls
  rules:
  - host: myapp-dns.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 8080
